# 2048h

./: 2048h.cabal  LICENSE
src/: ConsoleUI.hs  Game.hs  Main.hs
